--- a/client/pom.xml
+++ b/client/pom.xml
@@ -4,15 +4,16 @@
   <parent>
     <artifactId>heast-msg</artifactId>
     <groupId>heast</groupId>
-    <version>0.1</version>
+    <version>1.0</version>
   </parent>
 
   <artifactId>client</artifactId>
-  <version>0.1</version>
+  <version>1.0</version>
 
   <name>client</name>
 
   <properties>
+    <client.version>1.0</client.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
@@ -23,12 +24,7 @@
     <dependency>
       <groupId>heast</groupId>
       <artifactId>core</artifactId>
-      <version>0.1</version>
-    </dependency>
-    <dependency>
-      <groupId>heast</groupId>
-      <artifactId>heast-msg</artifactId>
-      <version>0.1</version>
+      <version>1.0</version>
     </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
@@ -43,7 +39,6 @@
   </dependencies>
 
   <build>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
@@ -81,25 +76,23 @@
           <version>3.7.1</version>
         </plugin>
         <plugin>
-          <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>3.0.0</version>
-        </plugin>
-        <plugin>
-          <groupId>org.openjfx</groupId>
-          <artifactId>javafx-maven-plugin</artifactId>
-          <version>0.0.8</version>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>3.2.0</version>
           <executions>
             <execution>
-              <!-- Default configuration for running with: mvn clean javafx:run -->
-              <id>default-app</id>
+              <id>copy-dependencies</id>
+              <phase>package</phase>
+              <goals>
+                <goal>copy-dependencies</goal>
+              </goals>
               <configuration>
-                <mainClass>heast.client.view.ClientGuiKt</mainClass>
-                <launcher>heast-messenger</launcher>
-                <jlinkZipName>HeastMessenger</jlinkZipName>
-                <jlinkImageName>Heast Messenger</jlinkImageName>
-                <noManPages>true</noManPages>
-                <stripDebug>true</stripDebug>
-                <noHeaderFiles>true</noHeaderFiles>
+                <outputDirectory>${project.build.directory}/libs</outputDirectory>
+                <overWriteReleases>false</overWriteReleases>
+                <overWriteSnapshots>false</overWriteSnapshots>
+                <overWriteIfNewer>true</overWriteIfNewer>
+                <includeScope>compile</includeScope>
+                <includeScope>runtime</includeScope>
               </configuration>
             </execution>
           </executions>
@@ -111,7 +104,7 @@
           <executions>
             <execution>
               <id>compile</id>
-              <phase>compile</phase>
+              <phase>process-sources</phase>
               <goals>
                 <goal>compile</goal>
               </goals>
@@ -121,7 +114,125 @@
             <jvmTarget>17</jvmTarget>
           </configuration>
         </plugin>
-      </plugins>
-    </pluginManagement>
+    </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>build-mac</id>
+
+      <activation>
+        <os><family>mac</family></os>
+      </activation>
+
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>exec-maven-plugin</artifactId>
+            <groupId>org.codehaus.mojo</groupId>
+            <version>1.6.0</version>
+            <executions>
+              <execution>
+                <id>Build Native Mac App</id>
+                <phase>install</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <workingDirectory>${project.basedir}</workingDirectory>
+              <executable>./build_app_mac.sh</executable>
+              <environmentVariables>
+                <APP_VERSION>
+                  ${client.version}
+                </APP_VERSION>
+                <PROJECT_VERSION>
+                  ${project.version}
+                </PROJECT_VERSION>
+              </environmentVariables>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>build-linux</id>
+
+      <activation>
+        <os><family>linux</family></os>
+      </activation>
+
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>exec-maven-plugin</artifactId>
+            <groupId>org.codehaus.mojo</groupId>
+            <version>1.6.0</version>
+            <executions>
+              <execution>
+                <id>Build Native Linux App</id>
+                <phase>install</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <workingDirectory>${project.basedir}</workingDirectory>
+              <executable>./build_app_linux.sh</executable>
+              <environmentVariables>
+                <APP_VERSION>
+                  ${client.version}
+                </APP_VERSION>
+                <PROJECT_VERSION>
+                  ${project.version}
+                </PROJECT_VERSION>
+              </environmentVariables>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>build-windows</id>
+
+      <activation>
+        <os><family>windows</family></os>
+      </activation>
+
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>exec-maven-plugin</artifactId>
+            <groupId>org.codehaus.mojo</groupId>
+            <version>1.6.0</version>
+            <executions>
+              <execution>
+                <id>Build Native Windows App</id>
+                <phase>install</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <workingDirectory>${project.basedir}</workingDirectory>
+              <executable>build_app_windows.bat</executable>
+              <environmentVariables>
+                <APP_VERSION>
+                  ${client.version}
+                </APP_VERSION>
+                <PROJECT_VERSION>
+                  ${project.version}
+                </PROJECT_VERSION>
+              </environmentVariables>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
