--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,10 +8,8 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  build-mac:
     runs-on: macos-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 17
@@ -36,3 +34,60 @@ jobs:
         with:
           name: APP file
           path: client/target/installer/*.app
+      - run: ls -l client/target/installer
+
+  build-win:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+      - name: Build with Maven
+        run: mvn -B install --file pom.xml
+      - name: Upload EXE
+        uses: actions/upload-artifact@v2
+        with:
+          name: EXE file
+          path: client/target/installer/*.exe
+      - name: Upload MSI
+        uses: actions/upload-artifact@v2
+        with:
+          name: MSI file
+          path: client/target/installer/*.msi
+      - name: Upload APP
+        uses: actions/upload-artifact@v2
+        with:
+          name: APP file
+          path: client/target/installer/*.app
+      - run: ls -l client/target/installer
+
+  build-linux:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+      - name: Build with Maven
+        run: mvn -B install --file pom.xml
+      - name: Upload DEB
+        uses: actions/upload-artifact@v2
+        with:
+          name: DEB file
+          path: client/target/installer/*.deb
+      - name: Upload APP
+        uses: actions/upload-artifact@v2
+        with:
+          name: APP file
+          path: client/target/installer/*.app
+      - name: Upload RPM
+        uses: actions/upload-artifact@v2
+        with:
+          name: RPM file
+          path: client/target/installer/*.rpm
+      - run: ls -l client/target/installer
