--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -22,6 +22,7 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.0-preview5" />
     <PackageReference Include="Avalonia.Svg.Skia" Version="11.0.0-preview5" />
+    <PackageReference Include="Avalonia.Controls.Skia" Version="11.0.0-preview5" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.5.1" />
   </ItemGroup>
 
