--- a/Chat/Chat.csproj
+++ b/Chat/Chat.csproj
@@ -30,5 +30,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="Migrations" />
+  </ItemGroup>
 
 </Project>
