--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <None Remove=".gitignore" />
     <None Remove="Assets\Navigation\Illustrator.ai" />
+    <None Remove="Todo.md" />
   </ItemGroup>
 
   <ItemGroup>
