--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -37,6 +37,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Model" />
+      <Folder Include="Assets\Notifications" />
+      <Folder Include="Model" />
     </ItemGroup>
 </Project>
