--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -37,5 +37,6 @@
 
     <ItemGroup>
         <Folder Include="Assets\Notifications" />
+        <Folder Include="Extensions" />
     </ItemGroup>
 </Project>
