--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -1,16 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Library</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <LangVersion>preview</LangVersion>
-  </PropertyGroup>
+   <PropertyGroup>
+      <OutputType>Library</OutputType>
+      <TargetFramework>net6.0</TargetFramework>
+      <ImplicitUsings>enable</ImplicitUsings>
+      <Nullable>enable</Nullable>
+      <LangVersion>preview</LangVersion>
+   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="DotNettyAll" Version="2.6.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
-  </ItemGroup>
+   <ItemGroup>
+      <!--    <PackageReference Include="DotNettyAll" Version="2.6.0" />-->
+      <PackageReference Include="SpanNetty.Common" Version="0.7.2012.2221"/>
+      <PackageReference Include="SpanNetty.Buffers" Version="0.7.2012.2221"/>
+      <PackageReference Include="SpanNetty.Transport" Version="0.7.2012.2221"/>
+      <PackageReference Include="SpanNetty.Codecs" Version="0.7.2012.2221"/>
+      <PackageReference Include="SpanNetty.Handlers" Version="0.7.2012.2221"/>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.2"/>
+   </ItemGroup>
 
 </Project>
