--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -10,12 +10,14 @@
 
    <ItemGroup>
       <!--    <PackageReference Include="DotNettyAll" Version="2.6.0" />-->
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.2" />
       <PackageReference Include="SpanNetty.Common" Version="0.7.2012.2221" />
       <PackageReference Include="SpanNetty.Buffers" Version="0.7.2012.2221" />
       <PackageReference Include="SpanNetty.Transport" Version="0.7.2012.2221" />
       <PackageReference Include="SpanNetty.Codecs" Version="0.7.2012.2221" />
       <PackageReference Include="SpanNetty.Handlers" Version="0.7.2012.2221" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+      <PackageReference Include="NUnit" Version="3.13.3" />
+      <PackageReference Include="NUnit.ConsoleRunner" Version="3.16.3" />
    </ItemGroup>
-
 </Project>
