--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -19,5 +19,12 @@
       <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
       <PackageReference Include="NUnit" Version="3.13.3" />
       <PackageReference Include="NUnit.ConsoleRunner" Version="3.16.3" />
+      <PackageReference Include="Crayon" Version="2.0.69" />
+   </ItemGroup>
+
+   <ItemGroup>
+      <Content Include="Assets\**">
+         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
    </ItemGroup>
 </Project>
