--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -1,30 +1,32 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-   <PropertyGroup>
-      <OutputType>Library</OutputType>
-      <TargetFramework>net6.0</TargetFramework>
-      <ImplicitUsings>enable</ImplicitUsings>
-      <Nullable>enable</Nullable>
-      <LangVersion>preview</LangVersion>
-   </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Library</OutputType>
+        <TargetFramework>net6.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <LangVersion>preview</LangVersion>
+    </PropertyGroup>
 
-   <ItemGroup>
-      <!--    <PackageReference Include="DotNettyAll" Version="2.6.0" />-->
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.2" />
-      <PackageReference Include="SpanNetty.Common" Version="0.7.2012.2221" />
-      <PackageReference Include="SpanNetty.Buffers" Version="0.7.2012.2221" />
-      <PackageReference Include="SpanNetty.Transport" Version="0.7.2012.2221" />
-      <PackageReference Include="SpanNetty.Codecs" Version="0.7.2012.2221" />
-      <PackageReference Include="SpanNetty.Handlers" Version="0.7.2012.2221" />
-      <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
-      <PackageReference Include="NUnit" Version="3.13.3" />
-      <PackageReference Include="NUnit.ConsoleRunner" Version="3.16.3" />
-      <PackageReference Include="Crayon" Version="2.0.69" />
-   </ItemGroup>
+    <ItemGroup>
+        <!--    <PackageReference Include="DotNettyAll" Version="2.6.0" />-->
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.2" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+        <PackageReference Include="SpanNetty.Common" Version="0.7.2012.2221" />
+        <PackageReference Include="SpanNetty.Buffers" Version="0.7.2012.2221" />
+        <PackageReference Include="SpanNetty.Transport" Version="0.7.2012.2221" />
+        <PackageReference Include="SpanNetty.Codecs" Version="0.7.2012.2221" />
+        <PackageReference Include="SpanNetty.Handlers" Version="0.7.2012.2221" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+        <PackageReference Include="NUnit" Version="3.13.3" />
+        <PackageReference Include="NUnit.ConsoleRunner" Version="3.16.3" />
+        <PackageReference Include="Crayon" Version="2.0.69" />
+    </ItemGroup>
 
-   <ItemGroup>
-      <Content Include="Assets\**">
-         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </Content>
-   </ItemGroup>
+    <ItemGroup>
+        <Content Include="Assets\**">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
 </Project>
