Can now click on login, signup, and guest. Updated button look

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -27,49 +27,12 @@
 
     <ItemGroup>
         <AvaloniaResource Include="Assets\**"/>
+        <AvaloniaResource Remove="Assets\appsettings.json"/>
     </ItemGroup>
 
     <ItemGroup>
-        <UpToDateCheckInput Remove="Controls\IconText.axaml"/>
-        <UpToDateCheckInput Remove="View\Content\Templates\TitleTemplate.axaml"/>
-    </ItemGroup>
-
-    <ItemGroup>
-        <Compile Update="View\Content\Login\ConnectPanel.axaml.cs">
-            <DependentUpon>ConnectPanel.axaml</DependentUpon>
-            <SubType>Code</SubType>
-        </Compile>
-        <Compile Update="View\Content\Login\CustomServerPanel.axaml.cs">
-            <DependentUpon>CustomServerPanel.axaml</DependentUpon>
-            <SubType>Code</SubType>
-        </Compile>
-        <Compile Update="View\Content\Login\GuestPanel.axaml.cs">
-            <DependentUpon>GuestPanel.axaml</DependentUpon>
-            <SubType>Code</SubType>
-        </Compile>
-        <Compile Update="View\Content\Login\LoginOptionsPanel.axaml.cs">
-            <DependentUpon>LoginOptionsPanel.axaml</DependentUpon>
-            <SubType>Code</SubType>
-        </Compile>
-        <Compile Update="View\Content\Login\ServerOptionsPanel.axaml.cs">
-            <DependentUpon>ServerOptionsPanel.axaml</DependentUpon>
-            <SubType>Code</SubType>
-        </Compile>
-        <Compile Update="View\Content\Login\LoginPanel.axaml.cs">
-            <DependentUpon>LoginPanel.axaml</DependentUpon>
-            <SubType>Code</SubType>
-        </Compile>
-        <Compile Update="View\Content\Login\SignupPanel.axaml.cs">
-            <DependentUpon>SignupPanel.axaml</DependentUpon>
-            <SubType>Code</SubType>
-        </Compile>
-        <Compile Update="View\Content\Login\WelcomePanel.axaml.cs">
-            <DependentUpon>WelcomePanel.axaml</DependentUpon>
-            <SubType>Code</SubType>
-        </Compile>
-    </ItemGroup>
-
-    <ItemGroup>
-        <AdditionalFiles Include="View\Content\Login\Templates\TitleTemplate.axaml"/>
+        <Content Include="Assets\appsettings.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 </Project>
