Refactor code structure for services in authentication
Improved code structure in the authentication server by separating logic into services. The project now uses DependencyInjection to resolve dependencies.

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -11,6 +11,7 @@
         <None Remove=".gitignore"/>
         <None Remove="Assets\Navigation\Illustrator.ai"/>
         <None Remove="Todo.md"/>
+        <None Remove="Client.csproj.DotSettings"/>
     </ItemGroup>
 
     <ItemGroup>
