--- a/Auth/Auth.csproj
+++ b/Auth/Auth.csproj
@@ -25,4 +25,8 @@
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <Folder Include="Console\"/>
+    </ItemGroup>
+
 </Project>
