Database connection works now as intended, client first steps for restructuring with DI-containers.

--- a/Auth/Assets/appsettings.json
+++ b/Auth/Assets/appsettings.json
@@ -1,3 +1,8 @@
 {
-  "ssh-password": "heast-auth"
+  "ssh-password": "heast-auth",
+  "db-host": "localhost",
+  "db-port": 3307,
+  "db-user": "admin",
+  "db-password": "admin",
+  "db-name": "Heast"
 }
