--- a/Auth/Auth.csproj
+++ b/Auth/Auth.csproj
@@ -21,7 +21,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.3"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.0"/>
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0"/>
     </ItemGroup>
 
