--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.2"/>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0"/>
         <PackageReference Include="SpanNetty.Common" Version="0.7.2012.2221"/>
@@ -18,6 +19,8 @@
         <PackageReference Include="SpanNetty.Codecs" Version="0.7.2012.2221"/>
         <PackageReference Include="SpanNetty.Handlers" Version="0.7.2012.2221"/>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.2"/>
+        <PackageReference Include="FluentValidation" Version="11.6.0"/>
+        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.6.0"/>
         <PackageReference Include="NUnit" Version="3.13.3"/>
         <PackageReference Include="NUnit.ConsoleRunner" Version="3.16.3"/>
         <PackageReference Include="Crayon" Version="2.0.69"/>
