--- a/Auth/Assets/appsettings.json
+++ b/Auth/Assets/appsettings.json
@@ -1,8 +1,16 @@
 {
   "ssh-password": "heast-auth",
-  "db-host": "localhost",
-  "db-port": 3307,
-  "db-user": "admin",
-  "db-password": "admin",
-  "db-name": "Heast"
+  "db": {
+    "host": "localhost",
+    "port": 3307,
+    "username": "admin",
+    "password": "admin",
+    "name": "Heast"
+  },
+  "mail": {
+    "host": "smtp.gmail.com",
+    "port": 587,
+    // Removed Leak
+    "ssl": true
+  }
 }
