--- a/Auth/Auth.csproj
+++ b/Auth/Auth.csproj
@@ -21,8 +21,10 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0"/>
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0"/>
     </ItemGroup>
 
