--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -54,12 +54,12 @@
             <DependentUpon>EmailVerificationPanel.axaml</DependentUpon>
             <SubType>Code</SubType>
         </Compile>
-        <Compile Update="View\Controls\ModalTemplate.axaml.cs">
-            <DependentUpon>ModalTemplate.axaml</DependentUpon>
-            <SubType>Code</SubType>
-        </Compile>
         <Compile Update="View\ModalLayer.axaml.cs">
             <DependentUpon>ModalLayer.axaml</DependentUpon>
+            <SubType>Code</SubType>
+        </Compile>
+        <Compile Update="View\Controls\ModalTemplate.axaml.cs">
+            <DependentUpon>ModalBase.axaml</DependentUpon>
             <SubType>Code</SubType>
         </Compile>
     </ItemGroup>
